[package]
name = "lume_tir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
indexmap = { workspace = true }

lume_span = { path = "../../crates/lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }
lume_types = { path = "../lume_types" }

[lints]
workspace = true
