[package]
name = "lume_tir_lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_span = { path = "../lume_span" }
lume_tir = { path = "../lume_tir" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

error_snippet = { workspace = true }
indexmap = { version = "^2.9" }

[lints]
workspace = true
