[package]
name = "lume_tir_lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_mangle = { path = "../../crates/lume_mangle" }
lume_span = { path = "../../crates/lume_span" }
lume_tir = { path = "../lume_tir" }
lume_type_metadata = { path = "../lume_type_metadata" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
indexmap = { workspace = true }
libftrace = { workspace = true }

[lints]
workspace = true
