[package]
name = "lume_type_metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_hir = { path = "../lume_hir" }
lume_span = { path = "../lume_span" }
lume_types = { path = "../lume_types" }

indexmap = { version = "^2.9", features = ["serde"] }
serde = { version = "=1.0.219", features = ["derive"] }

[lints]
workspace = true
