[package]
name = "lume_type_metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_hir = { path = "../lume_hir" }
lume_span = { path = "../../crates/lume_span" }
lume_types = { path = "../lume_types" }

indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
